--- a/s2/2.css
+++ b/s2/2.css
@@ -25,7 +25,7 @@
 filter: blur(0);
 width: 120px;
 height: 120px;
-
+box-shadow: 30px;
   
     /* clip-path: polygon(10% 45%, 35% 25%, 35% 0%, 65% 0%, 65% 25%, 90% 45%, 90% 50%, 65% 50%, 65% 100%, 35% 100%, 35% 50%, 10% 50%); */
 }
