--- a/s2/2.css
+++ b/s2/2.css
@@ -61,3 +61,12 @@ button{
     font-family: cursive;
     padding: 0.5rem 0.7rem;
 }
+.animate__animated.animate__bounce {
+    --animate-duration: 2s;
+  }
+  
+  /* This changes all the animations globally */
+  :root {
+    --animate-duration: 800ms;
+    --animate-delay: 0.9s;
+  }
