--- a/s2/2.css
+++ b/s2/2.css
@@ -26,6 +26,7 @@ filter: blur(0);
 width: 120px;
 height: 120px;
 box-shadow: 30px;
+transition:0.15s 0.15s;
   
     /* clip-path: polygon(10% 45%, 35% 25%, 35% 0%, 65% 0%, 65% 25%, 90% 45%, 90% 50%, 65% 50%, 65% 100%, 35% 100%, 35% 50%, 10% 50%); */
 }
@@ -69,4 +70,8 @@ button{
   :root {
     --animate-duration: 800ms;
     --animate-delay: 0.9s;
+  }
+  @keyframes example {
+    from {background-color: red;}
+    to {background-color: yellow;}
   }
