--- a/s2/2.css
+++ b/s2/2.css
@@ -5,7 +5,7 @@
 /* windows segoe   ui */
 @media  screen and (min-width :400px) {
    html{
-    font-size:130%;
+    font-size:100%;
    } 
     
 }
@@ -31,6 +31,7 @@ transition:0.15s 0.15s;
     /* clip-path: polygon(10% 45%, 35% 25%, 35% 0%, 65% 0%, 65% 25%, 90% 45%, 90% 50%, 65% 50%, 65% 100%, 35% 100%, 35% 50%, 10% 50%); */
 }
 body{
+
     font-family: 'Arial Narrow Bold', sans-serif;}
 
 input[type='text'],
@@ -75,3 +76,13 @@ button{
     from {background-color: red;}
     to {background-color: yellow;}
   } */
+
+  /* 1.skew()
+  2.rotate()
+  3.scale()
+  4.translate() */
+  .box{
+    width: 100px  ;
+    height: 100px;
+    background:#0540c0  ;
+  }
