--- a/s2/2.css
+++ b/s2/2.css
@@ -91,8 +91,8 @@ button{
   3.scale()
   4.translate() */
   .box{
-    width: 100px;
-    height: 100px;
+    width: 70px;
+    height: 70px;
 
  
   }
@@ -101,3 +101,23 @@ button{
     
 
   }
+  /* basic styles */
+    *{
+      box-sizing: border-box;
+
+    }
+    html{
+        
+    }
+    h1,h2,h3{
+        
+    }
+    .nav{
+      margin: 30px;
+    }
+     /* form */
+
+     /* navigation bar */
+     div.nav > ul.item >li{
+      
+     }
