--- a/s1/INDEX.CSS
+++ b/s1/INDEX.CSS
@@ -5,12 +5,12 @@
     font-family:  'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', ;
 }
 body{
-    background-color: #141642;
+    background-color: #101131;
 }
 .box{
     width: 1080px;
     border-left-style:ridge;
-    border-right-style:dotted;
+    border-right-style:ridge;
     border-radius: 20px;
     background-color: #161635;
     /* box-shadow: 5px 5px #515151 ; */
